prod/strapi-deploymemnt.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: strapi-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: strapi
  template:
    metadata:
      labels:
        app: strapi
    spec:
      containers:
      - env:
        - name: APP_NAME
          value: strapi-app
        - name: DATABASE_CLIENT
          value: mongo
        - name: DATABASE_HOST
          value: mongo-svc
        - name: DATABASE_PORT
          value: "27017"
        - name: DATABASE_NAME
          value: strapi
        image: martintarres/strapi-app:latest
        imagePullPolicy: IfNotPresent
        name: strapi
        ports:
        - containerPort: 1337
          protocol: TCP
