prod/mongo-service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: "2020-05-18T01:39:49Z"
  labels:
    app: mongo
  managedFields:
  - apiVersion: v1
    fieldsType: FieldsV1
    fieldsV1:
      f:metadata:
        f:labels:
          .: {}
          f:app: {}
      f:spec:
        f:clusterIP: {}
        f:ports:
          .: {}
          k:{"port":27017,"protocol":"TCP"}:
            .: {}
            f:name: {}
            f:port: {}
            f:protocol: {}
            f:targetPort: {}
        f:selector:
          .: {}
          f:app: {}
        f:sessionAffinity: {}
        f:type: {}
    manager: Go-http-client
    operation: Update
    time: "2020-05-18T01:39:49Z"
  name: mongo-svc
  namespace: default
  resourceVersion: "5446"
  selfLink: /api/v1/namespaces/default/services/mongo-svc
  uid: 78d5293d-fdb9-403d-9c78-d8afc7a703d6
spec:
  clusterIP: None
  ports:
  - name: mongo
    port: 27017
    protocol: TCP
    targetPort: 27017
  selector:
    app: mongo
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
